fix: update icon color for improved visibility

--- a/Day16Assignment/style.css
+++ b/Day16Assignment/style.css
@@ -62,7 +62,7 @@ html, body {
 
 .title i{
   background-color: aliceblue;
-  color: palevioletred;
+  color: rgb(214, 50, 47);
   padding: 5px;
   border-radius: 10px;
 }
